# brazillian_cds_datafeeder

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  update_cds_investing.py  vercel.json
.github/workflows/: update-cds-data.yml
api/: index.py
config/: settings.py
docs/: DATABASE_SETUP.md  DEV_PROD_GUIDE.md  POSTGRES_INTEGRATION.md  REFACTORING_SUMMARY.md
docs/setup/: DEPLOYMENT.md  NEON_POSTGRES_SETUP.md  PRODUCTION_SETUP.md  QUICKSTART.md  SETUP_FROM_SCRATCH.md  VERCEL_SETUP.md
scripts/: migrate_csv_to_db.py  start_api.py  update_cds.py
src/api/: main.py
src/api/models/: __init__.py  schemas.py
src/api/routes/: __init__.py  cds.py  favicon.py  health.py  home.py
src/database/: __init__.py  connection.py  models.py
src/scrapers/: __init__.py  investing_scraper.py
src/storage/: __init__.py  csv_storage.py  postgres_storage.py
src/utils/: __init__.py  logger.py
