[project]
name = "brazilian-cds-datafeeder"
version = "1.0.0"
description = "Brazilian CDS data scraper & API with automated daily updates and serverless deployment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Flavio Lopes", email = "flavio@ideiasfactory.com" }
]
keywords = [
    "cds",
    "credit-default-swaps",
    "brazilian-market",
    "fastapi",
    "data-scraper",
    "serverless",
    "vercel"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Office/Business :: Financial"
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "loguru>=0.7.0",
    "logtail-python>=0.2.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg2-binary>=2.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/ideiasfactory/brazillian_cds_datafeeder"
Repository = "https://github.com/ideiasfactory/brazillian_cds_datafeeder"
Documentation = "https://github.com/ideiasfactory/brazillian_cds_datafeeder#readme"
Issues = "https://github.com/ideiasfactory/brazillian_cds_datafeeder/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
